<resources>
    <string name="app_name">UrbanStores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="shop_name">Shop Name</string>
    <string name="open_hours"><font color="#37d176">Open Hours:</font><font color="#303030"> 9am to 8pm</font></string>
    <string name="mrp_txt">MRP:</string>
    <string name="rs_strikethrough_txt">Rs 100</string>
    <string name="add_button">ADD</string>
    <string name="change"><u>Change</u></string>
    <string name="select_logout">Are you sure you want to logout?</string>

    <string-array name="array_quantity">
        <item>1pcs</item>
        <item>2pcs</item>
        <item>3pcs</item>
        <item>4pcs</item>
        <item>5pcs</item>
        <item>6pcs</item>
        <item>7pcs</item>
        <item>8pcs</item>
        <item>9pcs</item>
        <item>10pcs</item>
        <item>11pcs</item>
        <item>12pcs</item>
        <item>13pcs</item>
        <item>14pcs</item>
        <item>15pcs</item>

    </string-array>


    <string name="resendOTP"><a href="">Resend OTP</a></string>
    <string name="addCard"><a href="">+Add New Card </a></string>
    <string name="you_order_has_been_placed_successfully">You Order has been placed successfully.</string>
    <string name="congratulations">Congratulations...</string>
    <string name="view_my_order">VIEW MY ORDER</string>
    <string name="exit_app">Are you sure you want to exit the app?</string>

</resources>