<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/openProducts"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardMaxElevation="@dimen/card_max_elevation"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/rsLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productName">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/productAmount"
                        style="@style/regularHeadingTxts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:text="Rs. 28"
                        android:textColor="@color/amount_txt_color"
                        android:textSize="@dimen/_11sdp"
                        app:layout_constraintStart_toEndOf="@+id/productImg"
                        app:layout_constraintTop_toBottomOf="@+id/productName" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/mrpTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/mrp_txt"
                        android:textColor="@color/mrp_discount_txt_color"
                        android:textSize="@dimen/_9sdp"
                        app:layout_constraintStart_toEndOf="@+id/productAmount"
                        app:layout_constraintTop_toBottomOf="@+id/productName" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/productDiscount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:background="@drawable/strikethrough"
                        android:text="@string/rs_strikethrough_txt"
                        android:textColor="@color/mrp_discount_txt_color"
                        android:textSize="@dimen/_9sdp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/productImg"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@mipmap/img_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/quantitys"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/rect_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rsLinear" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/productName"
                    style="@style/regularHeadingTxts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="Tomato Hybrid/Toma.."
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productImg" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/itemAddButton"
                    android:layout_width="@dimen/_47sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/add_button"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quantitys" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>